<resources>
    <string name="paypal_changed_ok">Paypal account successfully updated.</string>
    <string name="password_changed_ok">Password successfully updated.</string>
    <string name="phone_changed_ok">Phone number successfully updated.</string>
    <string name="password_encypted">Password is encrypted.</string>
    <string name="personal_data">Personal data.</string>
    <string name="user_characteristics">User characteristics.</string>
    <string name="user_level">User level.</string>
    <string name="user_ratings">User ratings.</string>
    <string name="medium_user_rate">Your rating is</string>
    <string name="no_ratings">You don\'t have any ratings yet.</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="feedback">Feedback received</string>
    <string name="match_history">Match history</string>
    <string name="user_rates_button">User ratings</string>
    <string name="app_name" translatable="false">Teddy</string>
    <string name="small_placeholder" translatable="false">Lorem ipsum</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_repetition">Repeat password</string>
    <string name="prompt_name">First name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_payment_account">PayPal account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_create_match">Create Match</string>
    <string name="action_continue">Continue</string>
    <string name="action_review">Submit Review</string>
    <string name="action_see_reviews">See Reviews</string>
    <string name="payment_correct">Payment successful.</string>
    <string name="error_invalid_username">Not a valid username</string>
    <string name="error_invalid_password">Password must have more than 5 characters</string>
    <string name="error_login">Login failed</string>
    <string name="error_matching_passwords">Passwords do not match</string>
    <string name="error_invalid_phone">Phone is not valid</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="error_invalid_payment_account">Invalid PayPal account</string>
    <string name="error_username_taken">This username is already taken</string>
    <string name="update_error">Data could not be updated.</string>
    <string name="reg_title_policy">Privacy Policy</string>
    <string name="reg_title_user">Create a user</string>
    <string name="reg_title_name">Name and Surname</string>
    <string name="reg_title_contact_info">Contact information</string>
    <string name="reg_title_payment">PayPal Account</string>
    <string name="reg_title_level_selection">Level Selection</string>
    <string name="reg_congrats">You account has been successfully created!</string>
    <string name="reg_privacy_policy">
        To create an account in \"Teddy\" you must first read and accept the privacy policy.\n
        \n
        The privacy policy of this application is adjusted to the General Data Protection
        Regulations established by the European Union. In particular, we will stress the following
        sections:\n
        \n
        1. All personal data gathered by this application will be exclusively used for the correct
        identification of the user and to enhance their experience with the application.\n
        2. Personal data regarding contact information will be exclusively used by Teddy employees
        in the event of contacting the user being strictly necessary.\n
        3. Personal data regarding payment methods (i.e. PayPal account) will be visible only to the
        user and will aim to make the payment process of the services provided by Teddy easier and
        more comfortable.\n
        4. Under no circumstances will personal date be commercialized or deliberately distributed
        with any other person or private institution.\n
        5. Gathered personal data that could be used to identify the user such as name and surname;
        as contact information such as phone number or email; or payment PayPal account, will be
        encrypted in the backend database.\n
        6. The users password will be encrypted using an SHA-1 algorithm and will not be able to be
        decrypted neither in the frontend application nor the backend database, which will only use
        the encrypted version.\n
        7. The user will have the right to modify their personal data.\n
        8. The user will have the right to delete their account.\n
        9. Personal data will not be shared with any person or institution outside Teddy, unless it
        is a public institution that possesses proper identification and that possesses a motive to
        access said information, such as a court warrant.\n
        10. As implied by the GDPR, in the case of a security breach or leak in the database that
        could potentially expose any sort of personal data regarding a user, both the user and the
        corresponding authorities will be informed in a time space not superior to 72 hours.\n
        \n
        Regarding user code of conduct, it is to be known by the user that Teddy will hold no
        responsibility regarding the following actions, but that may enact sanctioning measures
        against the perpetrator, which include the limitation of services offered by the application
        or the temporary or permanent suspension of the users account. Said aforementioned conducts
        are:\n
        \n
        1. The inappropriate use of the application with an aim that differs from the application\'s
        designed target.\n
        2. The inappropriate use of the personal data from other users such as name or surname.\n
        3. The inappropriate use of the opinions system to devalue or overvalue another user.\n
        4. The discomfort that may arise form the selection of a match level that does not
        correspond to the user\'s correct level.\n
        5. The discomfort that may arise from a user not selecting their correct level.\n
        6. The use of words or language that may seem inappropriate or offensive when writing a
        username, name or surname.\n
        7. The use of language that may seem inappropriate or offensive when writing a review or
        comment about another user.\n
        \n
        Lastly, it is made known to the user that, even though Teddy will not take responsibility,
        Teddy and Teddy employees will fully collaborate with the Security forces of the State, and
        that legal prosecution against users will be considered in the event of a user:\n
        \n
        1. Using the app with an illegitimate aim or with a target that is prosecuted by law.\n
        2. Using the app when aiming to cause emotional distress or psychological or physical
        damage to another person, independently of the fact of them being part of the registered
        user group present in the application.\n
        3. Trying to manipulate, distribute or commercialize this application without the
        appropriate intellectual or exploitation rights.\n
        4. Using the application when aiming to cause distress or harm to application staff.\n
        5. Using the application when aiming to cause or organise acts of vandalism in the
        premises.\n
        6. Using the account of another user without the consent of said user.\n
        7. Attempting to create an account with personal data that does not correspond to your
        person.\n
    </string>
    <string name="reg_checkbox_policy">I have read and I accept the privacy policy</string>
    <string name="match_start_time">Starting Time</string>
    <string name="match_date">Match Date</string>
    <string name="match_search">Search Match</string>
    <string name="match_end_time">Ending Time</string>
    <string name="review_hint">Write your review here!</string>
    <string name="welcome">"Welcome "</string>
    <string name="tab_text_1">Match search</string>
    <string name="tab_text_2">Match Creation</string>
    <string name="logo_description">Application logo</string>
    <string name="app_name_description">Application name: Teddy</string>
    <string name="congratulations">Congratulations!</string>
    <string name="button">Button</string>
</resources>