<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryVariant"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/congrats_title"
            style="@style/TeddyProccessTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/congrats_margin"
            android:layout_marginEnd="@dimen/congrats_margin"
            android:text="@string/congratulations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/congrats_subtitle"
            style="@style/TeddySubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/congrats_margin"
            android:layout_marginEnd="@dimen/congrats_margin"
            android:text="@string/small_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congrats_title" />

        <ImageView
            android:id="@+id/congrats_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/splash_height"

            android:layout_marginStart="@dimen/congrats_margin"
            android:layout_marginEnd="@dimen/congrats_margin"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/teddy_splash"
            app:layout_constraintBottom_toTopOf="@+id/congrats_continue_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congrats_subtitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/congrats_continue_btn"
            style="@style/TeddyButton.SecondaryColor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_lateral_margin"
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_marginEnd="@dimen/button_lateral_margin"
            android:layout_marginBottom="@dimen/login_general_margin"
            android:enabled="true"
            android:text="@string/action_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>